--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-circular-progress": "^1.3.9",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-indicators": "^0.17.0",
+    "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.11.3",
     "react-native-pdf": "^6.7.3",
     "react-native-safe-area-context": "^4.7.4",
