--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "18.2.0",
     "react-native": "0.72.7",
     "react-native-blob-util": "^0.19.6",
+    "react-native-calendars": "^1.1303.0",
     "react-native-circular-progress": "^1.3.9",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-indicators": "^0.17.0",
