--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^7.6.2",
     "@react-navigation/material-bottom-tabs": "^6.2.19",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
@@ -18,8 +19,10 @@
     "react-native-blob-util": "^0.19.6",
     "react-native-calendars": "^1.1303.0",
     "react-native-circular-progress": "^1.3.9",
+    "react-native-date-picker": "^4.3.5",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-indicators": "^0.17.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.11.3",
     "react-native-pdf": "^6.7.3",
