--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-native-svg": "^14.1.0",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.0.2",
-    "react-native-video": "^5.2.1"
+    "react-native-video": "^5.2.1",
+    "rn-country-picker": "^1.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
