--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@kddy/react-native-modalize": "^2.0.11",
+    "@nonam4/react-native-bottom-sheet": "^2.2.4",
+    "@poki_san/react-native-bottom-sheet": "^2.2.6",
     "@react-native-community/datetimepicker": "^7.6.2",
     "@react-navigation/material-bottom-tabs": "^6.2.19",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-native": "0.72.7",
     "react-native-blob-util": "^0.19.6",
@@ -26,6 +30,7 @@
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.11.3",
     "react-native-pdf": "^6.7.3",
+    "react-native-reanimated": "^3.6.1",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
     "react-native-splash-screen": "^3.3.0",
@@ -33,6 +38,7 @@
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.0.2",
     "react-native-video": "^5.2.1",
+    "rn-bottom-drawer": "^1.4.3",
     "rn-country-picker": "^1.0.1"
   },
   "devDependencies": {
