--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react": "18.2.0",
     "react-native": "0.72.7",
     "react-native-blob-util": "^0.19.6",
+    "react-native-bottom-drawer": "^1.0.2",
+    "react-native-bottomsheet-reanimated": "^0.3.1",
     "react-native-calendars": "^1.1303.0",
     "react-native-circular-progress": "^1.3.9",
     "react-native-date-picker": "^4.3.5",
@@ -39,7 +41,8 @@
     "react-native-vector-icons": "^10.0.2",
     "react-native-video": "^5.2.1",
     "rn-bottom-drawer": "^1.4.3",
-    "rn-country-picker": "^1.0.1"
+    "rn-country-picker": "^1.0.1",
+    "rn-swipeable-panel": "^1.2.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
